tests/unit-fail-compilation/j023b.c.ref
j023b.c: In function ‘main’:
j023b.c:4:14: error: void value not ignored as it ought to be
       return f();
              ^~~
compilation terminated due to -Wfatal-errors.
Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
